@@ -1,0 +1,1 @@
+.so man1/ralcalc.1
