@@ -1,0 +1,170 @@
+.TH "ralcalc" "1" "10th June 2007" "" ""
+.SH NAME
+ralcalc \- a simple command line calculator
+
+.SH SYNOPSIS
+.PP
+ralcalc -h
+.PP
+ralcalc
+.I equation
+.PP
+= -h
+.PP
+=
+.I equation
+
+.SH DESCRIPTION
+.B ralcalc
+is a command line calculator designed for very quick calculations where perhaps only a single result is wanted without having to start and then quit a program.
+.PP
+.B ralcalc
+is also installed as the
+.B =
+command to make using it even quicker.
+
+.SH OPTIONS
+.IP -h
+Display version and contact details.
+
+.SH NUMBER FORMAT
+Numbers should be input using the "." or "," as a decimal point (this is locale dependent so both may not work in your locale), with no thousands separators.
+.PP
+ralcalc supports the SI prefix characters for both input and output:
+.PP
+.RS
+= 2u/35
+.br
+2u/35 = 57.1429n
+.RE
+.PP
+Numbers of the form 1e-3 are not yet supported.
+
+.SH OPERATORS
+
+The simple mathematical operators for addition (+), subtraction (-), multiplication (*, x), division (/) and power (^) are supported, with addition and subtraction having the lowest precedence and power having the highest.
+.PP
+.RS
+= 1+2x3
+.br
+1+2x3 = 7
+.RE
+.PP
+Brackets ( (), [] ) can be used to control the order in which statements are processed:
+.PP
+.RS
+= [1+2]x3
+.br
+[1+2]x3 = 9
+.RE
+.PP
+Both the square and round brackets can be used and are both directly equivalent, so [1+2)x3 is also valid. Round brackets are more commonly used in mathematics, but the square brackets (and the "x" for multiplication) are included to try to prevent problems with the shell expanding those characters.
+.PP
+ralcalc stores the result of the calculation so that it can be used in the next calculation with the "_" character.
+.PP
+.RS
+= 2^0.5
+.br
+2^0.5 = 1.41421
+.br
+= 1/_
+.br
+1/_ = 0.707107
+.RE
+
+.SH FILES
+.I ~/.ralcalc_result
+.RS
+The result of the last calculation, which can be accessed in a later calculation using the "_" character. Note that this is not necessarily portable across different machine architectures.
+
+.SH ENVIRONMENT
+.IP HOME
+Determines where the .ralcalc_result file is stored.
+
+.SH DIAGNOSTICS
+ralcalc attempts to notify the user of as many errors as possible and indicate where those errors are, if they are user input related.
+
+.PP
+If an unknown character is included in the equation, an "unknown token" error will be generated. The error marker points to the invalid character.
+.PP
+.RS
+= 34/3@2
+
+Error: 34/3@2
+           ^ unknown token
+.RE
+
+.PP
+If an invalid number is included, a "bad number" error will be generated. The error marker points to the end of the invalid number.
+.PP
+.RS
+= 3.14.159x2.8^2
+
+Error: 3.14.159x2.8^2
+              ^ bad number
+.RE
+
+.PP
+If the number of open and close brackets do not match up, a "mismatched brackets" error will be generated. The error marker position has no significance.
+.RS
+= 5/[[2+3]*9
+
+Error: 5/[[2+3]*9
+                 ^ mismatched brackets
+
+.RE
+
+.PP
+If an operator appears in an invalid position, an "invalid operator" error will be generated. Examples of this include duplicated operators "++" and operators next to closed brackets "+)". The error marker indicates the invalid operator.
+.RS
+= 3^^7
+
+Error: 3^^7
+         ^ invalid operator
+.RE
+
+.PP
+If a bracket appears in an invalid position, an "invalid bracket" error will be generated. This type of error often overlaps with other errors, so there will be a number of messages written to the screen. It is best to fix this error first as it will likely be the root cause of the problem. The error marker indicates the invalid bracket.
+.RS
+= [2+]3
+ 
+Error: [2+]3
+          ^ invalid bracket
+  
+Error: [2+]3
+            ^ invalid operator
+.RE
+
+.PP
+If ralcalc is unable to allocate some memory, an "out of memory" error will be generated.
+
+.PP
+Internal error: If the parser notices two numbers next to each other yet does not generate a "bad number" error, then a "duplicate number" error will be generated. This should never happen.
+
+.PP
+Internal error: If an unknown error code is passed to the error output function, an "unknown error" will be generated and the invalid error code displayed.
+
+.SH EXIT VALUES
+.TP
+.B 0
+.I Success
+.TP
+.B 1
+.I At least one error occurred.
+
+.SH BUGS
+Brackets aren't matched correctly, so the following is treated as valid:
+.RS
+= 2]+[3
+.RE
+This particular example causes an infinite loop.
+.PP
+Negation of a number is given the highest precedent:
+.RS
+= -3^2
+-3^2 = 9
+.RE
+This should be -9.
+
+.SH AUTHOR
+Roger Light <roger@atchoo.org>
